[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "vicodin"
dynamic = ["version"]  # we’ll auto-read it from git tags
description = "Dr. House for your Python exceptions 💊"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "your@email.com" }]

dependencies = [
	"typer[all]",
	"rich",
	"litellm",
	"openai",
	"pydantic-settings",
]

[project.scripts]
vicodin = "vicodin.cli:app"

[tool.hatch.version]
source = "uv-dynamic-versioning"  # <-- tells Hatchling to use Git tags as your version source

[tool.hatch.build.targets.wheel]
packages = ["vicodin"]

